--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -7,8 +7,6 @@
     <td>[% file.filename %]</td>
   </tr>
   <tr>
-  </tr>
-  <tr>
     <th>File ID</th>
     <td>[% file.file_id %]</td>
     <th>Last updated</th>
@@ -30,16 +28,30 @@
     <th>Track</th>
     <th>Tracknumber</th>
     <th>Duration</th>
+  </tr>
+  <tr>
+    <td>[% file.artist %]</td>
+    <td>[% file.album %]</td>
+    <td>[% file.title %]</td>
+    <td>[% file.tracknumber %]</td>
+    <td>[% file.duration %]</td>
+  </tr>
+  <tr>
+    <th>Artist</th>
+    <th>Album</th>
+    <th>Track</th>
+    <th>Tracknumber</th>
+    <th>Duration</th>
     <th>Score</th>
   </tr>
   [% FOREACH metatrack IN metatracks %]
   <tr>
-    <td>[% metatrack.artist %]</td>
-    <td>[% metatrack.album %]</td>
-    <td>[% metatrack.track %]</td>
+    <td>[% metatrack.artist_name %]</td>
+    <td>[% metatrack.album_title %]</td>
+    <td>[% metatrack.track_title %]</td>
     <td>[% metatrack.tracknumber %]</td>
     <td>[% metatrack.duration %]</td>
-    <td>[% metatrack.score %]</td>
+    <td>[% metatrack.meta_score %]</td>
   </tr>
   [% END %]
 </table>
