added style.css from klette. fixed a bug in album.tmpl

--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -40,7 +40,7 @@
     [% END %]
   <tr>
     <td>[% album.file_albumartist_name %]</td>
-    <td>[% album.file_album_title %]</td>
+    <td>[% track.file_album_title %]</td>
     <td>[% track.file_artist_name %]</td>
     <td>[% track.file_track_title %]</td>
     <td>[% track.file_track_tracknumber %]</td>
