no longer meant to be a checkbox to reset a value "on next run", but rather let the ui reset it by copying the value from default_value

--- a/templates/config.tmpl
+++ b/templates/config.tmpl
@@ -7,7 +7,7 @@
     <th>Default value</th>
     <th>Value</th>
     <th>Description</th>
-    <th>Reset on next run</th>
+    <th>Reset to default</th>
   </tr>
   [% FOREACH setting IN settings %]
   <tr>
@@ -15,7 +15,7 @@
     <td>[% setting.default_value %]</td>
     <td>[% setting.value %]</td>
     <td>[% setting.description %]</td>
-    <td>(checkbox)</td>
+    <td>(button that copies default_value to value, or something)</td>
   </tr>
   [% END %]
 </table>
