renamed "main.tmpl" to "index.tmpl"

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -3,6 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="no">
   <head>
     <title>[% title %] - Locutus</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
