tiny bits of work on web

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,5 +1,6 @@
 [% INCLUDE header.tmpl
   title = 'Main'
 %]
-<p>[% message %]</p>
+[% INCLUDE navigation.tmpl %]
+<p>Welcome, etc.</p>
 [% INCLUDE footer.tmpl %]
