renamed "index.tmpl" to "statistics.tmpl", "index.tmpl" doesn't make much sense

--- a/templates/statistics.tmpl
+++ b/templates/statistics.tmpl
@@ -2,5 +2,5 @@
   title = 'Main'
 %]
 [% INCLUDE navigation.tmpl %]
-<p>Welcome, etc.</p>
+<p>There are x files. Total playlength is really long. Lots of albums &amp; stuff, etc</p>
 [% INCLUDE footer.tmpl %]
