yay, actually clickable pages & stuff \o/

--- a/templates/statistics.tmpl
+++ b/templates/statistics.tmpl
@@ -1,6 +1,8 @@
 [% INCLUDE header.tmpl
   title = 'Main'
 %]
-[% INCLUDE navigation.tmpl %]
-<p>There are x files. Total playlength is really long. Lots of albums &amp; stuff, etc</p>
+    <div id="content">
+      <h1>Locutus - statistics</h1>
+      <p>There are x files. Total playlength is really long. Lots of albums &amp; stuff, etc</p>
+    </div>
 [% INCLUDE footer.tmpl %]
