--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -6,3 +6,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div id="header">Locutus (should probably be a nice picture here)</div>
+    <div class="box"><a href="statistics.pl">Statistics</a></div>
+    <div class="box"><a href="albums.pl">Albums</a></div>
+    <div class="box"><a href="files.pl">Files</a></div>
+    <div class="box"><a href="settings.pl">Settings</a></div>
