added "artists" and "tracks" to "gui". mocked up an idea for layout of "artists" page

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -7,7 +7,10 @@
   </head>
   <body>
     <div id="header">Stud enter, Sam fund ET</div>
-    <div class="box"><a href="statistics.pl">Statistics</a></div>
+    <div class="box"><a href="artists.pl">Artists</a></div>
     <div class="box"><a href="albums.pl">Albums</a></div>
+    <div class="box"><a href="tracks.pl">Tracks</a></div>
     <div class="box"><a href="files.pl">Files</a></div>
+    <div class="box">right align from here?</div>
+    <div class="box"><a href="statistics.pl">Statistics</a></div>
     <div class="box"><a href="settings.pl">Settings</a></div>
