--- a/templates/files.tmpl
+++ b/templates/files.tmpl
@@ -1,58 +1,14 @@
 [% INCLUDE header.tmpl
   title = 'Files'
 %]
-    <table>
-      <tr>
-        <th>Filename</th>
-        <td>[% file.filename %]</td>
-      </tr>
-      <tr>
-        <th>File ID</th>
-        <td>[% file.file_id %]</td>
-        <th>Last updated</th>
-        <td>[% file.last_updated %]</td>
-      </tr>
-      <tr>
-        <th>Channels</th>
-        <td>[% file.channels %]</td>
-        <th>Bitrate</th>
-        <td>[% file.bitrate %]</td>
-        <th>Samplerate</th>
-        <td>[% file.samplerate %]</td>
-      </tr>
-    </table>
-    <table>
-      <tr>
-        <th>Artist</th>
-        <th>Album</th>
-        <th>Track</th>
-        <th>Tracknumber</th>
-        <th>Duration</th>
-      </tr>
-      <tr>
-        <td>[% file.artist %]</td>
-        <td>[% file.album %]</td>
-        <td>[% file.title %]</td>
-        <td>[% file.tracknumber %]</td>
-        <td>[% file.duration %]</td>
-      </tr>
-      <tr>
-        <th>Artist</th>
-        <th>Album</th>
-        <th>Track</th>
-        <th>Tracknumber</th>
-        <th>Duration</th>
-        <th>Score</th>
-      </tr>
-      [% FOREACH metatrack IN metatracks %]
-      <tr>
-        <td>[% metatrack.artist_name %]</td>
-        <td>[% metatrack.album_title %]</td>
-        <td>[% metatrack.track_title %]</td>
-        <td>[% metatrack.tracknumber %]</td>
-        <td>[% metatrack.duration %]</td>
-        <td>[% metatrack.meta_score %]</td>
-      </tr>
-      [% END %]
-    </table>
+    <p>
+      <input type="text" value="filter files here" />
+    </p>
+[% IF files %]
+    <ul>
+  [% FOREACH file IN files %]
+      <li><a href="file.pl?fiid=[% file.file_id %]">[% file.filename %]</a></li>
+  [% END %]
+    </ul>
+[% END %]
 [% INCLUDE footer.tmpl %]
