--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -2,16 +2,17 @@
   title = 'FIXME'
 %]
 [% IF album %]
-    <h1><a href="artist.pl?arid=[% album.artist_id %]">[% album.artist_name %]</a> - [% album.title %]</h1>
+    <h1>[% album.title %]</h1>
+    <h2>Artist: <a href="artist.pl?arid=[% album.artist_id %]">[% album.artist_name %]</a></h2>
     <h3>Type: [% album.type %]</h3>
     <h3>Released: [% album.released %]</h3>
-    <h3>MusicBraiz Album ID: <a href="http://musicbrainz.org/release/[% album.mbid %].html">[% album.mbid %]</a></h3>
+    <h3>MusicBrainz Album ID: <a href="http://musicbrainz.org/release/[% album.mbid %].html">[% album.mbid %]</a></h3>
     <h3>Custom artist: <input type="text" value="[% album.custom_artist_name %]" /></h3>
   [% IF tracks %]
     <h2>Tracks:</h2>
     <ol>
     [% FOREACH track IN tracks %]
-      <li>[% track.title %] ([% track.duration %])
+      <li><a href="track.pl?trid=[% track.track_id %]">[% track.title %]</a>
       [% IF track.files %]
         <ol>
         [% FOREACH file IN track.files %]
