--- a/templates/artist.tmpl
+++ b/templates/artist.tmpl
@@ -4,7 +4,7 @@
 [% IF artist %]
     <h1>[% artist.name %]</h1>
     <h2>Sortname: [% artist.sortname %]</h2>
-    <h3>MusicBraiz Artist ID: <a href="http://musicbrainz.org/artist/[% artist.mbid %].html">[% artist.mbid %]</a></h3>
+    <h3>MusicBrainz Artist ID: <a href="http://musicbrainz.org/artist/[% artist.mbid %].html">[% artist.mbid %]</a></h3>
   [% IF albums %]
     <h2>Albums:</h2>
     <ul>
