--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -11,7 +11,7 @@
     <h2>Matching tracks:</h2>
     <ol>
     [% FOREACH match IN matches %]
-      <li>[% match.meta_score %] <a href="track.pl?trid=[% match.track_id %]">[% match.metatrack_track_title %]</a>
+      <li>[% match.meta_score %] <a href="track.pl?trid=[% match.track_id %]">[% match.metatrack_track_title %]</a></li>
     [% END %]
     </ol>
   [% END %]
