added "offset" and "only_unmatched_files" to the list of files

--- a/templates/files.tmpl
+++ b/templates/files.tmpl
@@ -3,6 +3,7 @@
 %]
     <p>
       <input type="text" value="filter files here" />
+      <input type="checkbox" name='list_unmatched_only' value="1" />Only list unmatched files
     </p>
 [% IF files %]
     <ul>
