--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -22,20 +22,20 @@
         <th><a href="track.pl?trid=[% track.track_id %]">[% track.title %]</a></th>
         <th>[% track.duration %]</th>
       </tr>
-      [% IF track.files.size > 0 %]
-        [% FOREACH file IN track.files %]
+      [% IF track.matches.size > 0 %]
+        [% FOREACH match IN track.matches %]
       <tr>
-        <td rowspan="2" style="background: #[% file.color %];">[% file.meta_score %]</td>
-        <td rowspan="2"><input type="radio" name="use_file[[% track.track_id %]]" value="[% file.file_file_id %]" /></td>
-        <td>[% file.file_tracknumber %]</td>
-        <td>[% file.file_artist %]</td>
-        <td>[% file.file_albumartist %]</td>
-        <td>[% file.file_album %]</td>
-        <td>[% file.file_title %]</td>
-        <td>[% file.file_duration %]</td>
+        <td rowspan="2" style="background: #[% match.color %];">[% match.meta_score %]</td>
+        <td rowspan="2"><input type="radio" name="use_file[[% track.track_id %]]" value="[% match.file_file_id %]" /></td>
+        <td>[% match.file_tracknumber %]</td>
+        <td>[% match.file_artist %]</td>
+        <td>[% match.file_albumartist %]</td>
+        <td>[% match.file_album %]</td>
+        <td>[% match.file_title %]</td>
+        <td>[% match.file_duration %]</td>
       </tr>
       <tr>
-        <td colspan="6"><a href="file.pl?fiid=[% file.file_file_id %]">[% file.file_filename %]</a></td>
+        <td colspan="6"><a href="file.pl?fiid=[% match.file_file_id %]">[% match.file_filename %]</a></td>
       </tr>
         [% END %]
       [% END %]
