--- a/templates/track.tmpl
+++ b/templates/track.tmpl
@@ -10,11 +10,33 @@
     <h3>MusicBrainz Track ID: <a href="http://musicbrainz.org/track/[% track.mbid %].html">[% track.mbid %]</a></h3>
   [% IF matches %]
     <h2>Matching files:</h2>
-    <ol>
+    <table>
+      <tr>
+        <th>Score</th>
+        <th><input type="radio" name="use_file[[% track.track_id %]]" value="-1" checked="checked" /></th>
+        <th>[% track.tracknumber %]</th>
+        <th>[% track.artist_name %]</th>
+        <th>fixme?</th>
+        <th>[% track.album_title %]</th>
+        <th><a href="track.pl?trid=[% track.track_id %]">[% track.title %]</a></th>
+        <th>[% track.duration %]</th>
+      </tr>
     [% FOREACH match IN matches %]
-      <li>[% match.meta_score %] <a href="file.pl?fiid=[% match.file_file_id %]">[% match.file_filename %]</a></li>
+      <tr>
+        <td rowspan="2" style="background: #[% match.color %];">[% match.meta_score %]</td>
+        <td rowspan="2"><input type="radio" name="use_file[[% track.track_id %]]" value="[% match.file_file_id %]" /></td>
+        <td>[% match.file_tracknumber %]</td>
+        <td>[% match.file_artist %]</td>
+        <td>[% match.file_albumartist %]</td>
+        <td>[% match.file_album %]</td>
+        <td>[% match.file_title %]</td>
+        <td>[% match.file_duration %]</td>
+      </tr>
+      <tr>
+        <td colspan="6"><a href="file.pl?fiid=[% match.file_file_id %]">[% match.file_filename %]</a></td>
+      </tr>
     [% END %]
-    </ol>
+    </table>
   [% END %]
 [% END %]
 [% INCLUDE footer.tmpl %]
