--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -8,62 +8,67 @@
     <h3>Channels: [% file.channels %]</h3>
     <h3>Samplerate: [% file.samplerate %]hz</h3>
     <h2>Metadata:</h2>
-    <table>
-      <tr>
-        <th>Artist</th>
-        <td><input type="text" value="[% file.artist %]" /></td>
-      </tr>
-      <tr>
-        <th>Album</th>
-        <td><input type="text" value="[% file.album %]" /></td>
-      </tr>
-      <tr>
-        <th>Albumartist</th>
-        <td><input type="text" value="[% file.albumartist %]" /></td>
-      </tr>
-      <tr>
-        <th>Title</th>
-        <td><input type="text" value="[% file.title %]" /></td>
-      </tr>
-      <tr>
-        <th>Tracknumber</th>
-        <td><input type="text" value="[% file.tracknumber %]" /></td>
-      </tr>
-      <tr>
-        <th>Musicbrainz album ID</th>
-        <td><input type="text" value="[% file.musicbrainz_albumid %]" /></td>
-      </tr>
-      <tr>
-        <th>Musicbrainz track ID</th>
-        <td><input type="text" value="[% file.musicbrainz_trackid %]" /></td>
-      </tr>
-    </table>
+    <form action="file.pl">
+      <div><input type="hidden" name="fiid" value ="[% file.file_id %]" /></div>
+      <table>
+        <tr>
+          <th>Artist</th>
+          <td><input type="text" name="artist" value="[% file.artist %]" /></td>
+        </tr>
+        <tr>
+          <th>Album</th>
+          <td><input type="text" name="album" value="[% file.album %]" /></td>
+        </tr>
+        <tr>
+          <th>Albumartist</th>
+          <td><input type="text" name="albumartist" value="[% file.albumartist %]" /></td>
+        </tr>
+        <tr>
+          <th>Title</th>
+          <td><input type="text" name="title" value="[% file.title %]" /></td>
+        </tr>
+        <tr>
+          <th>Tracknumber</th>
+          <td><input type="text" name="tracknumber" value="[% file.tracknumber %]" /></td>
+        </tr>
+        <tr>
+          <th>Musicbrainz album ID</th>
+          <td><input type="text" name="musicbrainz_albumid" value="[% file.musicbrainz_albumid %]" /></td>
+        </tr>
+        <tr>
+          <th>Musicbrainz track ID</th>
+          <td><input type="text" name="musicbrainz_trackid" value="[% file.musicbrainz_trackid %]" /></td>
+        </tr>
+      </table>
+      <p><input type="submit" name="save_metadata" value="Save metadata" /></p>
   [% IF matches %]
-    <h2>Matching tracks:</h2>
-    <table>
-      <tr>
-        <th>Score</th>
-        <th><input type="radio" name="use_track[[% file.file_id %]]" value="-1" checked="checked" /></th>
-        <th>[% file.tracknumber %]</th>
-        <th>[% file.albumartist %]</th>
-        <th>[% file.album %]</th>
-        <th>[% file.artist %]</th>
-        <th>[% file.title %]</th>
-        <th>[% file.duration %]</th>
-      </tr>
+      <h2>Matching tracks:</h2>
+      <table>
+        <tr>
+          <th>Score</th>
+          <th><input type="radio" name="use_track" value="-1" checked="checked" /></th>
+          <th>[% file.tracknumber %]</th>
+          <th>[% file.albumartist %]</th>
+          <th>[% file.album %]</th>
+          <th>[% file.artist %]</th>
+          <th>[% file.title %]</th>
+          <th>[% file.duration %]</th>
+        </tr>
     [% FOREACH match IN matches %]
-      <tr>
-        <td style="background: #[% match.color %];">[% match.meta_score %]</td>
-        <td>[% IF match.track_id %]<input type="radio" name="use_track[[% file.file_id %]]" value="[% match.track_id %]" />[% ELSE %]N/A[% END %]</td>
-        <td>[% match.metatrack_track_tracknumber %]</td>
-        <td>fixme?</td>
-        <td>[% match.metatrack_album_title %]</td>
-        <td>[% match.metatrack_artist_name %]</td>
-        <td>[% IF match.track_id %]<a href="track.pl?trid=[% match.track_id %]">[% match.metatrack_track_title %]</a>[% ELSE %][% match.metatrack_track_title %][% END %]</td>
-        <td>[% match.metatrack_track_duration %]</td>
-      </tr>
+        <tr>
+          <td style="background: #[% match.color %];">[% match.meta_score %]</td>
+          <td>[% IF match.track_id %]<input type="radio" name="use_track" value="[% match.track_id %]" />[% ELSE %]N/A[% END %]</td>
+          <td>[% match.metatrack_track_tracknumber %]</td>
+          <td>fixme?</td>
+          <td>[% match.metatrack_album_title %]</td>
+          <td>[% match.metatrack_artist_name %]</td>
+          <td>[% IF match.track_id %]<a href="track.pl?trid=[% match.track_id %]">[% match.metatrack_track_title %]</a>[% ELSE %][% match.metatrack_track_title %][% END %]</td>
+          <td>[% match.metatrack_track_duration %]</td>
+        </tr>
     [% END %]
-    </table>
+      </table>
+      <p><input type="submit" name="use_selected" value="Use selected track" /></p>
+    </form>
   [% END %]
 [% END %]
 [% INCLUDE footer.tmpl %]
