--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -40,7 +40,7 @@
         </tr>
       </table>
       <p><input type="submit" name="save_metadata" value="Save metadata" /></p>
-  [% IF matches %]
+  [% IF matches.size() > 0 %]
       <h2>Matching tracks:</h2>
       <table>
         <tr>
