mostly just testing something with git

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div id="header">Stud enter, Sam fund ET</div>
+    <div id="header">Studentersamfundet</div>
     <div class="box"><a href="artists.pl">Artists</a></div>
     <div class="box"><a href="albums.pl">Albums</a></div>
     <div class="box"><a href="tracks.pl">Tracks</a></div>
