added a new page, "album_matching". it shows data from the cool view i recently added =)

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -10,6 +10,8 @@
     <div class="box"><a href="artists.pl">Artists</a></div>
     <div class="box"><a href="albums.pl">Albums</a></div>
     <div class="box"><a href="tracks.pl">Tracks</a></div>
+    <div class="box">space?</div>
+    <div class="box"><a href="album_matching.pl">Album matching</a></div>
     <div class="box"><a href="files.pl">Files</a></div>
     <div class="box">right align from here?</div>
     <div class="box"><a href="statistics.pl">Statistics</a></div>
