clearified changed "max/min/average score" to "max/min/average track score" as that explains slightly better what the values are. note that "min track score" excludes tracks with no matches and "average track score" includes tracks with no matches (and the track score is set to 0 for those tracks)

--- a/templates/album_matching.tmpl
+++ b/templates/album_matching.tmpl
@@ -11,9 +11,9 @@
         <th>Tracks</th>
         <th>Matched</th>
         <th>MBID matches</th>
-        <th>Max score</th>
-        <th>Min score</th>
-        <th>Average score</th>
+        <th>Max track score</th>
+        <th>Min track score</th>
+        <th>Average track score</th>
       </tr>
     [% FOREACH album IN albums %]
       <tr>
