Various styling changes, plus hooking up of filters.

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="no">
   <head>
     <title>[% title %] - Locutus</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <div id="header">Studentersamfundet</div>
-    <div class="box"><a href="artists.pl">Artists</a></div>
-    <div class="box"><a href="albums.pl">Albums</a></div>
-    <div class="box"><a href="tracks.pl">Tracks</a></div>
-    <div class="box">space?</div>
-    <div class="box"><a href="album_matching.pl">Album matching</a></div>
-    <div class="box"><a href="files.pl">Files</a></div>
-    <div class="box">right align from here?</div>
-    <div class="box"><a href="statistics.pl">Statistics</a></div>
-    <div class="box"><a href="settings.pl">Settings</a></div>
+    <div id="header">
+      <h4>Studentersamfundet</h4>
+    </div>
+    <ul id="settings" class="list">
+      <li><a href="statistics.pl">Statistics</a></li>
+      <li><a href="settings.pl">Settings</a></li>
+    </ul>
+    <ul id="menu" class="list">
+      <li><a href="artists.pl">Artists</a></li>
+      <li><a href="albums.pl">Albums</a></li>
+      <li><a href="tracks.pl">Tracks</a></li>
+      <li>space?</li>
+      <li><a href="album_matching.pl">Album matching</a></li>
+      <li><a href="files.pl">Files</a></li>
+    </ul>
+
+    <div id="content">
