--- a/templates/albums.tmpl
+++ b/templates/albums.tmpl
@@ -1,9 +1,13 @@
 [% INCLUDE header.tmpl
   title = 'Albums'
 %]
-    <p>
-      <input type="text" value="filter albums here" />
-    </p>
+    <form action="" method="get" id="search">
+      <p>
+        <label for="filter">Filter...</label>
+        <input type="text" name="filter" id="filter" />
+      </p>
+    </form>
+    <h2>Albums</h2>
 [% IF albums.size() > 0 %]
     <ul>
   [% FOREACH album IN albums %]
