--- a/templates/files.tmpl
+++ b/templates/files.tmpl
@@ -3,7 +3,7 @@
 %]
     <form action="" method="get" id="search">
       <p>
-        <label for="filter">Search...</label>
+        <label for="filter">Search</label>
         <input type="text" id="filter" name="filter" />
         <label for="list_unmatched_only">Only list unmatched files</label>
         <input type="checkbox" name="list_unmatched_only" id="list_unmatched_only" value="1" [% unmatched ? 'checked="checked"' : '' %] />
