--- a/web/css/style.css
+++ b/web/css/style.css
@@ -156,9 +156,7 @@ option.optgroup {
 	padding-left: 1em;
 	padding-right: 0.5em;
 }
-.disabled {
-	text-decoration: line-through;
-}
+
 .outdated {
 	color: gray;
 }
@@ -242,7 +240,6 @@ td.error a {
 	background: #F9F9F9;
 	width: auto;
 	border: 1px dotted #babdb6;
-	float: left;
 }
 
 ul.list li > a {
@@ -258,4 +255,32 @@ h1,h2,h3,h4,h5,h6 { font-family: Georgia, Times, Times New Roman, serif;}
 
 ul.list {
 	list-style-type: none;
+}
+ul.list li {
+	float: left;
+}
+
+
+#pagination a:visited, #pagination a:link {
+	color: black;
+}
+
+#pagination span, #pagination a {
+	margin: 0px 2px;
+	display: block;
+	border: 1px solid #f1c8c2;
+	padding: 4px 9px;
+	text-decoration: none;
+}
+#pagination a:hover, #pagination span:hover {
+	border-color: #912822;
+}
+#pagination span.disabled {
+	opacity: 0.3;
+	border-color: #f1c8c2 !important;
+}
+#pagination span.current {
+	background-color: #912822;
+	border-color: #912822 !important;
+	color: white;
 }
