--- a/templates/album_matching.tmpl
+++ b/templates/album_matching.tmpl
@@ -3,7 +3,7 @@
 %]
     <form action="" method="get" id="search">
       <p>
-        <label for="filter">Filter...</label>
+        <label for="filter">Filter</label>
         <input type="text" name="filter" id="filter" />
       </p>
     </form>
