changed mode back to 644 for most template files and removed an unnecessary "</li>"

--- a/templates/albums.tmpl
+++ b/templates/albums.tmpl
@@ -38,7 +38,7 @@
   [% END %]
       <li id="navNext">
   [% IF pagination.next %]
-        <a href="?page=[% pagination.next %]">Next &raquo;</a></li>
+        <a href="?page=[% pagination.next %]">Next &raquo;</a>
   [% ELSE %]
         <span class="disabled">Next &raquo;</span>
   [% END %]
