--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -47,6 +47,7 @@
         <tr>
           <th>Score</th>
           <th>[% file.tracknumber %]</th>
+          <th>[% file.albumartist %]</th>
           <th>[% file.album %]</th>
           <th>[% file.artist %]</th>
           <th>[% file.title %]</th>
@@ -55,11 +56,12 @@
     [% FOREACH match IN matches %]
         <tr>
           <td style="background: #[% match.color %];">[% match.meta_score %]</td>
-          <td>[% match.metatrack_track_tracknumber %]</td>
-          <td>[% match.metatrack_album_title %]</td>
-          <td>[% match.metatrack_artist_name %]</td>
-          <td>[% IF match.track_id %]<a href="track.pl?trid=[% match.track_id %]">[% match.metatrack_track_title %]</a>[% ELSE %][% match.metatrack_track_title %][% END %]</td>
-          <td>[% match.metatrack_track_duration %]</td>
+          <td>[% match.tracknumber %]</td>
+          <td><a href="artist.pl?arid=[% match.albumartist_id %]">[% match.albumartist %]</a></td>
+          <td><a href="album.pl?alid=[% match.album_id %]">[% match.album %]</a></td>
+          <td><a href="artist.pl?arid=[% match.artist_id %]">[% match.artist %]</a></td>
+          <td><a href="track.pl?trid=[% match.track_id %]">[% match.title %]</a></td>
+          <td>[% match.duration %]</td>
         </tr>
     [% END %]
       </table>
